Updated book.html so the icons no longer display on small screens. And updated the supplementary pages so the columns now stack.

--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -233,6 +233,11 @@
     font-weight: 400;
 }
 
+/* Block */
+.sm-block {
+    display: none;
+}
+
 /* Media Queries */
 
 @media(min-width: 769px) {
@@ -246,5 +251,9 @@
 
     .box-container {
         margin-left: 20px;
+    }
+
+    .sm-block {
+        display: inline;
     }
 }
